# xml2po-ng

./: AUTHORS  ChangeLog  FIXME  Makefile.am  README  README.md  TODO  devel_requirements.pip  diff.xml  editor.xml  find.xml  github.xml  ignore.xml  intentionSettings.xml  javaeeExternalResources.xml  jdk.table.xml  material_theme.xml  other.xml  requirements.pip  setup.cfg  setup.py  terminal.xml  ui.lnf.xml  xml2po.1.xml  xml2po.pc.in
codestyles/: Default.xml
colors/: _@user_Darcula.icls  _@user_Default.icls  _@user_GitHub _Material_.icls  _@user_Github.icls
inspection/: Default.xml
src/xml2pong/: Makefile.am  __init__.py
src/xml2pong/modes/: Makefile.am  docbook.py  gs.py  mallard.py  ubuntu.py  xhtml.py
tests/: ChangeLog  README  adjacent-ents.po  common.py  conftest.py  deep-nonfinals.xml  deep-nonfinals.xml.out  docbook.xml  docbook.xml.out  footnotes.po  footnotes.xml  footnotes.xml.out  keepents.po  mallard.po  test.py  ubuntu-mode.xml  ubuntu-mode.xml.out  xhtml.po
tests/relnotes/: el.po  release-notes.xml  rnapplets.xml  rnapplications.xml  rncontrolcenter.xml  rndesktop.xml  rndocs.xml  rngames.xml  rni18n.xml  rninstallation.xml  rnplatform.xml  rnstandards.xml  rnsysadmin.xml  rnthanks.xml  rnthemes.xml  rntoc.xml  rnwhy.xml  test.sh
tests/relnotes/el/: rnapplets.xml  rnapplications.xml  rndesktop.xml  rndocs.xml  rngames.xml  rni18n.xml  rninstallation.xml  rnplatform.xml  rnstandards.xml  rnsysadmin.xml
tests/reuse/: reuse.xml.out
tools/: External Tools.xml
